@@ -16,7 +16,8 @@ module Sequel
     metaattr_accessor :output, :backtraces
 
     # Print the message to the output stream
-    def self.deprecate(message)
+    def self.deprecate(method, instead=nil)
+      message = instead ? "#{method} is deprecated and will be removed in a future version.  #{instead}." : method
       return unless output
       output.puts(message)
       case backtraces
@@ -30,6 +31,55 @@ module Sequel
       when true
         caller.each{|c| output.puts(c)}
       end
+    end
+  end
+
+  def self.open(*args, &block)
+    Deprecation.deprecate('Sequel.open', 'Use Sequel.connect instead')
+    Database.connect(*args, &block)
+  end
+
+  def self.upcase_identifiers=(value)
+    Deprecation.deprecate('Sequel.upcase_identifiers=', 'Use Sequel.identifier_input_method = :upcase or nil')
+    Database.identifier_input_method = value ? :upcase : nil
+  end
+
+  def self.use_parse_tree
+    Deprecation.deprecate('Sequel.use_parse_tree', 'Sequel has not used ParseTree since 2.2')
+    false
+  end
+
+  def self.use_parse_tree=(val)
+    Deprecation.deprecate('Sequel.use_parse_tree=', 'Sequel has not used ParseTree since 2.2')
+    raise(Error, 'ParseTree support has been removed from Sequel') if val
+  end
+
+  class Database
+    def self.upcase_identifiers=(value)
+      Deprecation.deprecate('Sequel::Database.upcase_identifiers=', 'Use Sequel::Database.identifier_input_method = :upcase or nil')
+      self.identifier_input_method = value ? :upcase : nil
+    end
+
+    def upcase_identifiers=(v)
+      Deprecation.deprecate('Sequel::Database#upcase_identifiers=', 'Use Sequel::Database#identifier_input_method = :upcase or nil')
+      self.identifier_input_method = v ? :upcase : nil
+    end
+
+    def upcase_identifiers?
+      Deprecation.deprecate('Sequel::Database#upcase_identifiers?', 'Use Sequel::Database#identifier_input_method == :upcase')
+      identifier_input_method == :upcase
+    end
+  end
+
+  class Dataset
+    def upcase_identifiers=(v)
+      Deprecation.deprecate('Sequel::Dataset#upcase_identifiers=', 'Use Sequel::Dataset#identifier_input_method = :upcase or nil')
+      @identifier_input_method = v ? :upcase : nil
+    end
+
+    def upcase_identifiers?
+      Deprecation.deprecate('Sequel::Dataset#upcase_identifiers?', 'Use Sequel::Dataset#identifier_input_method == :upcase')
+      @identifier_input_method == :upcase
     end
   end
 end
